--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "postinstall": "prisma generate",
     "test": "jest",
     "test:watch": "jest --watch"
-    
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^0.10.4",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/adapter-neon": "^6.3.1",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
