--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@neondatabase/serverless": "^0.10.4",
     "@paypal/react-paypal-js": "^8.8.3",
     "@prisma/adapter-neon": "^6.3.1",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "bcrypt-ts-edge": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
